Fix spacing

--- a/assets/scss/layout/_archive.scss
+++ b/assets/scss/layout/_archive.scss
@@ -25,7 +25,7 @@
 		}
 
 		.entry-thumbnail {
-			margin-inline: -20px;
+			margin-inline: calc(var(--post--padding) * -1);
 		}
 
 		.post-wrap {
