--- a/assets/scss/layout/_content.scss
+++ b/assets/scss/layout/_content.scss
@@ -15,7 +15,8 @@
 }
 
 .single {
-	.entry-header {
+	.entry-header,
+	.entry-thumbnail {
 		margin-bottom: 2em;
 	}
 }
@@ -76,7 +77,7 @@
 	}
 }
 
-$aspect_ratios: ( 1:1, 3:2, 4:3, 16:9 );
+$aspect_ratios: (1:1, 3:2, 4:3, 16:9);
 
 .entry-thumbnail-wrap {
 	position: relative;
@@ -94,5 +95,27 @@ $aspect_ratios: ( 1:1, 3:2, 4:3, 16:9 );
 		height: 100%;
 		width: 100%;
 		object-fit: cover;
+	}
+}
+
+.post-navigation {
+	margin-block-start: 40px;
+
+	.nav-links {
+		display: flex;
+
+		> div {
+			flex: 1;
+			display: flex;
+
+			&.nav-next {
+				justify-content: flex-end;
+			}
+		}
+
+		a {
+			display: flex;
+			align-items: center;
+		}
 	}
 }
